# This is a bazel port of https://github.com/laurent-laporte-pro/stackoverflow-q2059482
# by Laurent LAPORTE - MIT License
load("//:bazel/python.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "environ_ctx",
    srcs = [
        "environ_ctx.py",
    ],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "environ_ctx_test",
    srcs = ["environ_ctx_test.py"],
    deps = [
        ":environ_ctx",
    ],
)
