load("@bazel_gazelle//:def.bzl", "gazelle_binary", "gazelle_generation_test")

# gazelle:exclude ./

filegroup(
    name = "test_data",
    srcs = glob(["**/*"]),
)

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@bazel_gazelle//language/go",
        "//engprod/gazelle/ts",
    ],
)

gazelle_generation_test(
    name = "gazelle_plugins_test",
    gazelle_binary = ":gazelle_binary",
    test_data = [":test_data"],
)
