load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "loader_lib",
    srcs = [
        "builder.go",
        "docker.go",
        "main.go",
    ],
    importpath = "github.com/juanique/monorepo/bazel/oci/loader",
    visibility = ["//visibility:private"],
    deps = [
        "//salsa/go/files",
        "//salsa/go/json",
        "//salsa/go/must",
        "//salsa/go/random",
        "//salsa/go/tarbuilder",
        "@com_github_docker_docker//api/types:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "loader",
    embed = [":loader_lib"],
    visibility = ["//visibility:public"],
)
