load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helloworld_lib",
    srcs = ["helloworld.go"],
    importpath = "examples/go/helloworld",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_lib",
    srcs = ["helloworld.go"],
    importpath = "examples/go",
    visibility = ["//visibility:private"],
)
