load("@pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "greeter_client",
    srcs = ["greeter_client.py"],
    deps = [
        requirement("grpcio"),
        "//examples/grpc/protos:helloworld_py_grpc",
        "//examples/grpc/protos:helloworld_py_proto",
    ],
)

py_binary(
    name = "greeter_client_main",
    srcs = ["greeter_client_main.py"],
    deps = [":greeter_client"],
)

py_test(
    name = "greeter_client_integration_test",
    srcs = ["greeter_client_integration_test.py"],
    data = [
        "//examples/grpc/server:greeter_server_docker.tar",
    ],
    exec_properties = {
        # Tell BuildBuddy to run this test using a Firecracker microVM.
        "workload-isolation-type": "firecracker",
        # Tell BuildBuddy to ensure that the Docker daemon is started
        # inside the microVM before this action runs, so that we don't
        # have to worry about starting it ourselves.
        "init-dockerd": "true",
    },
    deps = [
        "//salsa/docker/testing:docker_service",
        requirement("docker"),
        ":greeter_client",
    ],
)
