load("//:bazel/python.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "greeter_client",
    srcs = ["greeter_client.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//examples/grpc/protos:helloworld_py_grpc",
        "//examples/grpc/protos:helloworld_py_proto",
        "@pip_deps//grpcio",
    ],
)

py_binary(
    name = "greeter_client_main",
    srcs = ["greeter_client_main.py"],
    visibility = ["//:__subpackages__"],
    deps = [":greeter_client"],
)

py_test(
    name = "greeter_client_integration_test",
    srcs = ["greeter_client_integration_test.py"],
    data = [
        "//examples/grpc/server:greeter_server_docker.loader",
    ],
    firecracker = True,
    deps = [
        ":greeter_client",
        "//salsa/docker/testing:docker_service",
        "@pip_deps//docker",
    ],
)
