load("//:bazel/python.bzl", "py_binary", "py_library")
load("@pip_deps//:requirements.bzl", "requirement")
load("//:bazel/docker.bzl", "py_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

package(default_visibility = ["//examples:__subpackages__"])

py_binary(
    name = "greeter_server",
    srcs = ["greeter_server.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//examples/grpc/protos:helloworld_py_grpc",
        "//examples/grpc/protos:helloworld_py_proto",
        "@pip_deps//grpcio",
        "@pip_deps//grpcio_reflection",
    ],
)

py_library(
    name = "greeter_server_lib",
    srcs = [],
    deps = [
        requirement("grpcio"),
        requirement("grpcio-reflection"),
        "//examples/grpc/protos:helloworld_py_grpc",
        "//examples/grpc/protos:helloworld_py_proto",
    ],
)

py_image(
    name = "greeter_server_docker",
    binary = ":greeter_server",
    port = "50051",
)

container_push(
    name = "greeter_server_docker_tag",
    format = "Docker",
    image = ":greeter_server_docker",
    registry = "localhost:5000",
    repository = "monorepo/greeter_server",
    tag = "latest",
)
