load("//:bazel/python.bzl", "py_binary")
load("//bazel/oci:defs.bzl", "image")

package(default_visibility = ["//examples:__subpackages__"])

py_binary(
    name = "greeter_server",
    srcs = ["greeter_server.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//examples/grpc/protos:helloworld_py_grpc",
        "//examples/grpc/protos:helloworld_py_proto",
        "@pip_deps//grpcio",
        "@pip_deps//grpcio_reflection",
        "@pip_deps//grpclib",  # keep
        "@pip_deps//protobuf",  # keep
    ],
)

image(
    name = "greeter_server_docker",
    base = "@ubuntu",
    binary = ":greeter_server",
)
