load("//:bazel/python.bzl", "py_binary")
load("//bazel/oci:defs.bzl", "image")

package(default_visibility = ["//examples:__subpackages__"])

py_binary(
    name = "greeter_server",
    srcs = ["greeter_server.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//examples/grpc/protos:helloworld_py_grpc",
        "//examples/grpc/protos:helloworld_py_proto",
        "@pip//grpcio",
        "@pip//grpcio_reflection",
        "@pip//grpclib",  # keep
        "@pip//protobuf",  # keep
    ],
)

image(
    name = "greeter_server_docker",
    base = "@ubuntu",
    binary = ":greeter_server",
)
