load("//bazel/js:js.bzl", "js_binary")

js_binary(
    name = "main",
    data = [
        "main.mjs",
        "//examples/js/js_deps/formatter",
    ],
    entry_point = ":main.mjs",
)

js_binary(
    name = "main2",
    data = [
        "main2.cjs",
        "//examples/js/js_deps/formatter:formatter2",
    ],
    entry_point = ":main2.cjs",
)
